.provarCaches/00D410000011HE0EAM/objects/rstk__mrpsup__c.object
<CustomObject>
    <description>mrpsup__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_amtappl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AMTAPPL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_amtunappl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AMTUNAPPL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divmrpsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_dtepick__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DTEPICK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_icdreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disassembly Derived Component</label>
        <referenceTo>rstk__icdreq__c</referenceTo>
        <relationshipName>MRPSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_icreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Requisitions</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipName>MRPSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_index__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>INDEX</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>item_ui</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>MRPSUPs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_lne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LNE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_lnerel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LNEREL</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_ordlne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDLNE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_ordlnerel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDLNEREL</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_ordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDTYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipName>MRPSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>MRPSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>mrpsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>mrpsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_src_pl__c</fullName>
        <label>mrpsup_src_pl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inter-Division</fullName>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Subcontract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_sts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sts</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpsup_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipName>MRPSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MRP Supply</label>
    <nameField>
        <label>MRPSUP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRP Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>